--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: #181c23;
 }
 
 #map-canvas {
@@ -14,5 +13,5 @@ body {
   left: 2px;
   margin: 0;
   font-size: 12px;
-  color: #f7f7df;
+  color: #222;
 }
